# speech_realtime_api

./: README.md
android-realtime-asr/: README.md  local.properties  实时语音识别Java部分描述.md
android-realtime-asr-0.2/: build.gradle  settings.gradle
android-realtime-asr-0.2/app/src/main/java/com/baidu/ai/speech/realtime/: Const.java  MiniMain.java  Util.java
android-realtime-asr-0.2/app/src/main/java/com/baidu/ai/speech/realtime/android/: AbstractUIActivity.java  LoggerUtil.java  MainActivity.java  MyMicrophoneInputStream.java
android-realtime-asr-0.2/gradle/wrapper/: gradle-wrapper.properties
android-realtime-asr/app/: build.gradle
android-realtime-asr/app/src/main/: AndroidManifest.xml
android-realtime-asr/app/src/main/assets/: 16k-0.pcm
android-realtime-asr/app/src/main/java/com/baidu/ai/speech/realtime/full/: Main.java
android-realtime-asr/app/src/main/res/layout/: common_mini.xml
android-realtime-asr/app/src/main/res/values/: strings.xml
cpp-realtime-asr/: CMakeLists.txt  build_and_run.sh  const.h
cpp-realtime-asr-0.1/: CMakeLists.txt  README.md
cpp-realtime-asr-0.1/common/: json_writer.cpp  log.h  map_any.cpp  root_certificates.h
cpp-realtime-asr/common/: json_writer.h  log.cpp  map_any.h
cpp-realtime-asr/mini/: main.cpp  session.cpp  session.h
java-realtime-asr/: settings.gradle
java-realtime-asr-0.1/: 16k_active.pcm  README.md  build.gradle
java-realtime-asr-0.1/src/main/java/com/baidu/ai/speech/realtime/: Const.java
python-realtime-asr/: realtime_asr.py  requirement.txt
python-realtime-asr-0.1/: README.md  const.py
(+11 files in other folders)
